Hide scrollbar and full height fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+    .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .hide-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
+}
+
+
+body > div:first-child,
+body > div:first-child > main
+{
+    height: 100%;
+}
+
+
